feat: prom metrics
